versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/vsphere/vsphere.adoc
= Creating a VMware vSphere Cluster
:description: Use Rancher to create a VMware vSphere cluster. It may consist of groups of VMs with distinct properties which allow for fine-grained control over the sizing of nodes.

import YouTube from '@site/src/components/YouTube'

By using Rancher with VMware vSphere, you can bring cloud operations on-premises.

Rancher can provision nodes in vSphere and install Kubernetes on them. When creating a Kubernetes cluster in vSphere, Rancher first provisions the specified number of virtual machines by communicating with the vCenter API. Then it installs Kubernetes on top of them.

A vSphere cluster may consist of multiple groups of VMs with distinct properties, such as the amount of memory or the number of vCPUs. This grouping allows for fine-grained control over the sizing of nodes for each Kubernetes role.

== VMware vSphere Enhancements

The vSphere node templates allow you to bring cloud operations on-premises with the following enhancements:

=== Self-healing Node Pools

One of the biggest advantages of provisioning vSphere nodes with Rancher is that it allows you to take advantage of Rancher's self-healing node pools, also called the xref:cluster-deployment/infra-providers/infra-providers.adoc#_about_node_auto_replace[node auto-replace feature,] in your on-premises clusters. Self-healing node pools are designed to help you replace worker nodes for stateless applications. When Rancher provisions nodes from a node template, Rancher can automatically replace unreachable nodes.

[CAUTION]
====

It is not recommended to enable node auto-replace on a node pool of master nodes or nodes with persistent volumes attached, because VMs are treated ephemerally. When a node in a node pool loses connectivity with the cluster, its persistent volumes are destroyed, resulting in data loss for stateful applications.
====


=== Dynamically Populated Options for Instances and Scheduling

Node templates for vSphere have been updated so that when you create a node template with your vSphere credentials, the template is automatically populated with the same options for provisioning VMs that you have access to in the vSphere console.

For the fields to be populated, your setup needs to fulfill the xref:./provision-kubernetes-clusters-in-vsphere.adoc#_preparation_in_vmware_vsphere[prerequisites.]

=== More Supported Operating Systems

You can provision VMs with any operating system that supports `cloud-init`. Only YAML format is supported for the https://cloudinit.readthedocs.io/en/latest/topics/examples.html[cloud config.]

== Creating a VMware vSphere Cluster

In xref:cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc[this section,] you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in vSphere.

== Provisioning Storage

For an example of how to provision storage in vSphere using Rancher, refer to xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[this section.] In order to dynamically provision storage in vSphere, the vSphere provider must be enabled. Refer to xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere config] and xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[out-of-tree vSphere config].

== Enabling the VMware vSphere Cloud Provider

When a cloud provider is set up in Rancher, the Rancher server can automatically provision new infrastructure for the cluster, including new nodes or persistent storage devices.

For details on enabling the vSphere cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere config] and xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[out-of-tree vSphere config].
